# 2025-p7-ethanpinto

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  q-demo.tf  sqs.tf
todo/tasks/: ical.py
todo/views/: routes.py
